fix some outline and border spacing

--- a/assets/styles/artist-resident.css
+++ b/assets/styles/artist-resident.css
@@ -21,7 +21,7 @@
   grid-area: h1;
   font-size: 2rem;
   margin: 0;
-  border-bottom: solid var(--color-accent);
+  border-bottom: .25rem solid var(--color-accent);
 }
 
 .resident img {
